<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_activity_settings">Settings</string>
    <string name="app_name">Atomic Hub</string>
    <string name="themes">Themes</string>
    <string name="status_bar">Status Bar</string>
    <string name="ui">UI</string>
    <string name="keys">Keys</string>
    <string name="misc">Misc</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme_ui">Theming</string>
    <string name="lsui">Lock Screen </string>
    <string name="iconstatusbar">Icons</string>
    <string name="clockstatusbar">Clock</string>
    <string name="gesturestatusbar">Gestures</string>
    <string name="qstatusbar">Quick Settings</string>
    <string name="volumerocker">Volume Button</string>
    <string name="misc_notification">Notification</string>
    <string name="misc_gamingmode">Gaming Mode</string>
    <string name="sbbattery">Battery Customization </string>
    <string name="lockscreen_fod_category">Fingerprint On Display</string>
    <string name="UI_Title">User Interface</string>
    <string name="UI_Summary">Redefine your experience by changing fonts, icons, volume panel</string>
    <string name="Theme_Title">Theme</string>
    <string name="Theme_summary">Take your experience to next level by playing with colors !</string>
    <string name="Status_Title">Status Bar</string>
    <string name="Status_summary">Improve your interaction by placing essential items at your sight !</string>
    <string name="Button_Title">Button</string>
    <string name="Button_Summary">Yes There are lot of buttons ! Isn\'t it ?  check them here  !</string>
    <string name="Misc_Title">Misc</string>
    <string name="Misc_Summary">Still can’t find the one your looking for  check here !</string>
    <string name="Team_Title">Team</string>
    <string name="Team_summary">Spend time in knowing people behind this project !</string>
    <string name="button">Buttons</string>
    <string name="team">Team</string>
    <string name="disabled">Disabled</string>
    <string name="clocksettings_title">Clock Settings</string>
    <string name="clocksettings_summary">Statusbar clock settings</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreen to put phone to sleep</string>
    <string name="use_old_mobiletype_title">Use old style mobile data icons</string>
    <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (Reboot required)</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="tuner_title">Statusbar Icon Tuner</string>
    <string name="tuner_summary">Control visibility of status bar icons</string>
    <string name="data_disabled_icon_title">Data disabled icon</string>
    <string name="data_disabled_icon_summary">Display a cross sign next to signal bar when data is disabled</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display the roaming indicator in signal icon when in roaming mode</string>
    <string name="status_bar_clock_date_title">Clock and Date</string>
    <string name="status_bar_clock_date_summary">Customize your statusbar clock and date</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_date_title">Date settings</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="clock_style_title">Lockscreen lock</string>
    <string name="clock_style_summary">Customize your lockscreen clock</string>
    <string name="accent_color">Accent picker</string>
    <string name="accent_summary">System wide accent maker</string>
    <string name="default_string">Default</string>
    <string name="accent_color_title">RGB accent color picker</string>
    <string name="theme_customization_systemui_title">Primary Theme</string>
    <string name="lock_screen_custom_clock_face_category">Lockscreen Clock</string>
    <string name="lock_screen_custom_clock_face_title">Lockscreen clock style</string>
    <string name="lock_screen_custom_clock_face_default">Default</string>
    <string name="lock_screen_custom_clock_face_default_bold">Default (bold)</string>
    <string name="lock_screen_custom_clock_face_analog">Analog</string>
    <string name="lock_screen_custom_clock_face_bubble">Bubble</string>
    <string name="lock_screen_custom_clock_face_samsung">Samsung</string>
    <string name="lock_screen_custom_clock_face_samsung_bold">Samsung (bold)</string>
    <string name="lock_screen_custom_clock_face_samsung_highlight">Samsung (colored)</string>
    <string name="lock_screen_custom_clock_face_typographic">Typographic</string>
    <string name="lock_screen_custom_clock_face_404_IDE_Clock">404 IDE Clock</string>
    <string name="lock_screen_custom_clock_face_shapeshift">ShapeShift Clock</string>
    <string name="gvisual_title">Gvisual Mod</string>
    <string name="rounded_ui_title">Rounded corner</string>
    <string name="rounded_ui_dialog_title">Select rounded corner model</string>
    <string name="rounded_style_default">Default</string>
    <string name="statusbar_height_title">Statusbar height</string>
    <string name="statusbar_height_dialog_title">Select statusbar height model</string>
    <string name="allow_signature_fake">Allow signature spoofing</string>
    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app. Mainly used for MicroG.</string>
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen inputs when device is in pocket</string>
    <string name="navigation_bar_arrow_keys_title">IME arrows</string>
    <string name="navigation_bar_arrow_keys_summary">Show arrow keys on navbar while typing</string>
    <string name="navigation_bar_inverse_title">Inverse layout</string>
    <string name="navbar_layout_title">Layout</string>
    <string name="allow_incall_home_title">Home button when ringing</string>
    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
    <string name="backlight_timeout_title">Buttons backlight timeout</string>
    <string name="button_brightness_title">Backlight</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="gaming_mode_title">Gaming Mode</string>
    <string name="gaming_mode_summary">Customize gaming mode preferences</string>
    <string name="switch_style_title">Switch appearance</string>
    <string name="volume_panel">Volume panel style</string>
    <string name="volume_panel_aosp_val" translatable="false">co.potatoproject.plugin.volume.aosp</string>
    <string name="misc_animation">Animation</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="lockscreen_fod_summary">Configure settings related to the FOD view</string>
    <string name="transparent_lockscreen_notification_title">Transparent notifications</string>
    <string name="transparent_lockscreen_notification_summary">Enable lockscreen notifications with semi-transparent backgrounds</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up the device if charger is plugged/unplugged</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="ambient_display_custom_title">Ambient Display</string>
    <string name="lockscreen_media_art_title">Media art</string>
    <string name="lockscreen_media_art_summary">Toggle visibility of media art</string>
</resources>