<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/ui" >


    <Preference
            android:key="ui_animation"
            android:layout="@layout/ui_animation" />

    <PreferenceCategory
        android:key="ui_lockscreen"
        android:title="@string/lsui">

        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_lockscreen"
            android:title="@string/double_tap_sleep_lockscreen_title"
            android:summary="@string/double_tap_sleep_lockscreen_summary"
            android:defaultValue="false" />

        <PreferenceScreen
            android:key="ambient_display_custom"
            android:persistent="false"
            android:title="@string/ambient_display_custom_title">
                <intent 
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.custom.ambient.display"
                    android:targetClass="com.custom.ambient.display.DozeSettings" />
        </PreferenceScreen>

        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="lockscreen_media_art"
            android:title="@string/lockscreen_media_art_title"
            android:summary="@string/lockscreen_media_art_summary"
            android:defaultValue="true" />

        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />

        <com.palladium.atomichub.preference.SecureSettingSwitchPreference
            android:key="lock_screen_transparent_notifications_enabled"
            android:title="@string/transparent_lockscreen_notification_title"
            android:summary="@string/transparent_lockscreen_notification_summary"
            android:defaultValue="false" />


        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="pocket_judge"
            android:title="@string/pocket_judge_title"
            android:summary="@string/pocket_judge_summary"
            android:defaultValue="false" />

     </PreferenceCategory>

    <PreferenceCategory
        android:key="fod_category"
        android:title="@string/lockscreen_fod_category">
        
        <Preference
            android:key="lockscreen_fod_category"
            android:fragment="com.palladium.atomichub.fragments.FodGeneral"
            android:title="@string/lockscreen_fod_category"
            android:summary="@string/lockscreen_fod_summary" />  

    </PreferenceCategory>

    <ListPreference
        android:key="switch_style"
        android:title="@string/switch_style_title"
        android:persistent="false"
        android:entries="@array/switch_style_entries"
        android:entryValues="@array/switch_style_values" />

    <!-- Gvisual mod -->
    <PreferenceCategory
        android:key="gvisual_category"
        android:title="@string/gvisual_title" >

        <ListPreference
            android:key="statusbar_height"
            android:title="@string/statusbar_height_title"
            android:dialogTitle="@string/statusbar_height_dialog_title"
            android:entries="@array/statusbar_height_titles"
            android:entryValues="@array/statusbar_height_values" />

        <ListPreference
            android:key="rounded_ui"
            android:title="@string/rounded_ui_title"
            android:dialogTitle="@string/rounded_ui_dialog_title"
            android:entries="@array/rounded_ui_titles"
            android:entryValues="@array/rounded_ui_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="volume_panel_stuff"
        android:title="@string/volume_panel">

        <com.palladium.atomichub.preference.SystemSettingListPreference
            android:key="systemui_plugin_volume"
            android:title="@string/volume_panel"
            android:entries="@array/volume_panel_entries"
            android:entryValues="@array/volume_panel_values"
            android:defaultValue="@string/volume_panel_aosp_val" />

    </PreferenceCategory>


</PreferenceScreen>
