<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misc" >
    <Preference
            android:key="misc_animation"
            android:layout="@layout/misc_animation" />
        <com.palladium.atomichub.preference.GlobalSettingSwitchPreference
                android:key="allow_signature_fake"
                android:title="@string/allow_signature_fake"
                android:summary="@string/allow_signature_fake_summary"
                android:defaultValue="false" />
        
        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
                android:key="navigation_bar_arrow_keys"
                android:title="@string/navigation_bar_arrow_keys_title"
                android:summary="@string/navigation_bar_arrow_keys_summary"
                android:defaultValue="false" />

        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
                android:key="navigation_bar_inverse"
                android:title="@string/navigation_bar_inverse_title"
                android:defaultValue="false" />

        <com.palladium.atomichub.preference.SystemSettingListPreference
                android:key="navbar_layout_views"
                android:title="@string/navbar_layout_title"
                android:summary="%s"
                android:entries="@array/navbar_layout_entries"
                android:entryValues="@array/navbar_layout_values"
                android:defaultValue="default" />


        <com.palladium.atomichub.preference.GlobalSettingSwitchPreference
                android:key="wake_when_plugged_or_unplugged"
                android:title="@string/wakeup_when_plugged_unplugged_title"
                android:summary="@string/wakeup_when_plugged_unplugged_summary"
                android:defaultValue="true" />

        <SwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:persistent="false" />

    <PreferenceCategory
        android:key="misc_notification"
        android:title="@string/misc_notification">

        <!-- Heads up -->
        <Preference
                android:key="heads_up_notifications"
                android:title="@string/heads_up_notifications"
                android:fragment="com.palladium.atomichub.fragments.HeadsUpSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc_gamingmode"
        android:title="@string/misc_gamingmode">

        <!-- Gaming Mode -->
        <Preference
                android:key="gaming_mode"
                android:fragment="com.palladium.atomichub.fragments.GamingMode"
                android:title="@string/gaming_mode_title"
                android:summary="@string/gaming_mode_summary"
                android:defaultValue="false" />

    </PreferenceCategory>    

    <PreferenceCategory
        android:key="misc_animation"
        android:title="@string/misc_animation">

        <ListPreference
                android:key="pref_scrollingcache"
                android:dialogTitle="@string/pref_scrollingcache_title"
                android:title="@string/pref_scrollingcache_title"
                android:summary="@string/pref_scrollingcache_summary"
                android:entries="@array/entries_scrollingcache"
                android:entryValues="@array/values_scrollingcache" />	

    </PreferenceCategory>   


</PreferenceScreen>
