<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/keys"
    >
    <Preference
            android:key="button_animation"
            android:layout="@layout/button_animation" />

        <PreferenceCategory
                android:key="key_volumekey"
                android:title="@string/volumerocker">

        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false" />


        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="volume_button_music_control"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="false" />     

        <com.palladium.atomichub.preference.SystemSettingSwitchPreference
            android:key="allow_incall_home"
            android:title="@string/allow_incall_home_title"
            android:summary="@string/allow_incall_home_summary"
            android:defaultValue="true" />
            
        </PreferenceCategory>

    

     

   <PreferenceCategory
        android:key="hardware_keys"
        android:title="@string/hardware_keys_category" >

        <com.palladium.atomichub.preference.CustomSeekBarPreference
            android:key="button_brightness"
            android:title="@string/button_brightness_title"
            android:max="255"
            settings:min="0"
            settings:units=""
            android:persistent="false" />

        <ListPreference
            android:dialogTitle="@string/backlight_timeout_title"
            android:entries="@array/backlight_timeout_entries"
            android:entryValues="@array/backlight_timeout_values"
            android:key="backlight_timeout"
            android:persistent="false"
            android:title="@string/backlight_timeout_title" />

    </PreferenceCategory>

</PreferenceScreen>