<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/status_bar" >
    
    <Preference
            android:key="statusbar_animation"
            android:layout="@layout/statusbar_animation" />

    <com.palladium.atomichub.preference.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:title="@string/show_fourg_title"
        android:summary="@string/show_fourg_summary"
        android:defaultValue="false" />

    <com.palladium.atomichub.preference.SystemSettingSwitchPreference
        android:key="show_volte"
        android:title="@string/volte_switch_title"
        android:summary="@string/volte_switch_summary"
        android:defaultValue="true" />

    <com.palladium.atomichub.preference.SystemSettingSwitchPreference
        android:key="use_old_mobiletype"
        android:title="@string/use_old_mobiletype_title"
        android:summary="@string/use_old_mobiletype_summary"
        android:defaultValue="true" />
</PreferenceScreen>