<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/themes" >

    <Preference
            android:key="theme_animation"
            android:layout="@layout/theme_animation" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="accent_color"
        android:title="@string/accent_color"
        android:summary="@string/accent_summary"
        android:defaultValue="0xffffff"
        android:persistent="false" />

    <PreferenceCategory
        android:key="theme_customization_category"
        android:title="@string/theme_ui">

        <ListPreference
            android:key="android.theme.customization.font"
            android:title="@string/theme_customization_font_title"/>
        <ListPreference
            android:key="android.theme.customization.adaptive_icon_shape"
            android:title="@string/theme_customization_icon_shape_title"/>
    </PreferenceCategory>

    <ListPreference
        android:key="lock_screen_custom_clock_face"
        android:summary="%s"
        android:title="@string/lock_screen_custom_clock_face_title"
        android:entries="@array/lock_screen_custom_clock_face_entries"
        android:entryValues="@array/lock_screen_custom_clock_face_values" />   

</PreferenceScreen>